@@ -1,15 +1,15 @@
 package io.github.olib963.javatest.eventually;
 
-import io.github.olib963.javatest.TestResults;
 import io.github.olib963.javatest.eventually.documentation.ConfigDocumentationTests;
 import io.github.olib963.javatest.eventually.documentation.EventualTest;
 import io.github.olib963.javatest.fixtures.FixtureDefinition;
 import io.github.olib963.javatest.fixtures.Fixtures;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
-import java.util.stream.Stream;
+import java.util.stream.Collectors;
 
 import static io.github.olib963.javatest.JavaTest.*;
 
@@ -19,14 +19,14 @@ public class Tests {
             Fixtures.definitionFromThrowingFunctions(Executors::newSingleThreadExecutor, ExecutorService::shutdown);
 
     public static void main(String... args) {
-        var result = runTests(Stream.of(
+        var result = runTests(List.of(
                 EventuallyTests.passing(),
                 suite("Failing Tests",  EventuallyTests.FAILING.map(t ->
                         test(t.name, () -> {
-                            var results = run(Stream.of(testableRunner(t)), Collections.emptyList());
+                            var results = run(List.of(testableRunner(t)), Collections.emptyList());
                             return that(!results.succeeded, t.name + " should fail");
                         })
-                ))
+                ).collect(Collectors.toList()))
         ));
         if (!result.succeeded) {
             throw new RuntimeException("Unit tests failed!");
@@ -40,7 +40,7 @@ public class Tests {
         }
 
         var documentationTests = Fixtures.fixtureRunner("Executor Service", executorFixture,
-                es -> testableRunner(Stream.of(new ConfigDocumentationTests(), EventualTest.eventualTest(es))));
+                es -> testableRunner(List.of(new ConfigDocumentationTests(), EventualTest.eventualTest(es))));
 
         if (!run(documentationTests).succeeded) {
             throw new RuntimeException("Documentation tests failed!");
